= Changelog

To download stable release, please use "switch tags" button and point to the latest release link.

== Head - unstable

* NEW: app.settings.js added, it holds all the settings for the application
* NEW: offline feature added alhumduillah
* NEW: gq.nextJuz() and gq.prevJuz added 
* NEW: gq.config{} confiq object added for configuration application
* NEW: gq.quran.parse.buck2arabicSimple() added
* NEW: gq.quran.parse.buck2arabic() added
* NEW: gq.quran.parse.arabic2buck() added
* NEW: Quran.initBuck() added
* NEW: Quran.word{} object added
* NEW: Quran.ayah.fromWord() added
* NEW: Quran.verseNo.word() added
* NEW: documenation added on js files
* CHANGED: gq.quran.parse.load() changed parameter from text to object of verse, also changed child functions too
* CHANGED: layout.verseParse() changed parameter from text to object of verse, to support gq.quran.parse.load() - check above line changed
* ChANGED: gq.quran.textNotCached to gq.quran.selectedStringNotCached() 
* FIX: gq.player.status() fixed, if player has no status at all

== Release v3.4.0

* FIX: scroll keep going up on ayah change
* FIX: css layout sidebar error fixed
* CHANGED: replaced QuranNavigator with gq
* CHANGED: gq.player.seek method param
* NEW: added new gq.player.setting for jplayer settings and event triggering, now you can hook your custom events directly to player
* NEW: XB Zar font added 

== Release v3.3.0

* FIX: old cookie replace
* FIX: quranText css class fixed for single view
* FIX: iphone, ipod, ipad and mac player bug - now audio can be played properly in them. (audio delay is not supported)
* FIX: loading... bug
* FIX: multi-selection on translation text 
* CHANGED: major changes in QuranNavigator javascript class
* CHANGED: major changes in layout javascript class
* NEW: select arabic & native language recitation
* NEW: select arabic & native language Quran text as default 
* NEW: added hr in single, list and search view